# octoopt2

./: .env.example  .gitignore  README.md  pyproject.toml
octoopt2/: config.py  daemon.py  db.py  main.py  metrics.py  scheduler.py  status.py
octoopt2/control/: ecodan.py  inverter.py
octoopt2/data/: consumption.py  inverter.py  octopus.py  solcast.py  weather.py
octoopt2/givenergy_modbus_async/client/: commands.py
octoopt2/optimizer/: forecast.py  model.py  schedule.py
scripts/: accuracy_report.py  away.py  backfill_battery_sign.py  get_melcloud_id.py  preload_consumption.py  report.py  set_reserve.py  setup.py
web/: accuracy.html  index.html  status.html
